src/test/ui/unreachable/unwarned-match-on-never.stderr
error: unreachable expression
  --> $DIR/unwarned-match-on-never.rs:10:5
   |
LL |     match x {}
   |     ^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/unwarned-match-on-never.rs:1:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^
note: any code following this expression is unreachable
  --> $DIR/unwarned-match-on-never.rs:8:11
   |
LL |     match x {}
   |           ^

error: unreachable arm
  --> $DIR/unwarned-match-on-never.rs:15:15
   |
LL |         () => ()
   |               ^^
   |
note: any code following this expression is unreachable
  --> $DIR/unwarned-match-on-never.rs:14:11
   |
LL |     match (return) {
   |           ^^^^^^^^

error: unreachable expression
  --> $DIR/unwarned-match-on-never.rs:21:5
   |
LL | /     match () {
LL | |         () => (),
LL | |     }
   | |_____^
   |
note: any code following this expression is unreachable
  --> $DIR/unwarned-match-on-never.rs:20:5
   |
LL |     return;
   |     ^^^^^^

error: aborting due to 3 previous errors

